Alignment fixes

--- a/blocks/recruit/recruit.css
+++ b/blocks/recruit/recruit.css
@@ -1,9 +1,9 @@
 .recruit {
-	padding:16px 0 32px;
+	padding: 16px 16px 32px 16px;
 }
 
 @media (width >=900px) {
 	.recruit {
-		padding:16px 16px 32px 0;
-	}	
+		padding: 16px 16px 32px 0;
+	}
 }
