--- a/blocks/retain/retain.css
+++ b/blocks/retain/retain.css
@@ -1,5 +1,5 @@
 .retain {
-  padding: 16px 16px 32px;
+  padding: 16px 16px 32px 16px;
   background-color: #ededed;
 }
 
